--- a/api/home/models/home.settings.json
+++ b/api/home/models/home.settings.json
@@ -2,7 +2,8 @@
   "kind": "singleType",
   "collectionName": "homes",
   "info": {
-    "name": "Home"
+    "name": "Home",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -19,10 +20,10 @@
     "driverText": {
       "type": "text"
     },
-    "sponsorText": {
+    "socialText": {
       "type": "text"
     },
-    "socialText": {
+    "sponsor": {
       "type": "text"
     }
   }
