--- a/api/sponsors/models/sponsors.settings.json
+++ b/api/sponsors/models/sponsors.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "sponsors",
   "info": {
-    "name": "Sponsors"
+    "name": "Sponsors",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -20,7 +21,7 @@
       "type": "string"
     },
     "logo": {
-      "collection": "file",
+      "model": "file",
       "via": "related",
       "allowedTypes": [
         "images",
