--- a/api/sponsors/models/sponsors.settings.json
+++ b/api/sponsors/models/sponsors.settings.json
@@ -14,9 +14,6 @@
     "name": {
       "type": "string"
     },
-    "description": {
-      "type": "text"
-    },
     "link": {
       "type": "string"
     },
@@ -30,6 +27,9 @@
       ],
       "plugin": "upload",
       "required": false
+    },
+    "description": {
+      "type": "richtext"
     }
   }
 }
