--- a/api/driver/models/driver.settings.json
+++ b/api/driver/models/driver.settings.json
@@ -45,6 +45,10 @@
     },
     "Hardware": {
       "type": "richtext"
+    },
+    "feature": {
+      "type": "boolean",
+      "default": false
     }
   }
 }
